force-app/main/default/objects/Surgical_Product_Information__c/Surgical_Product_Information__c.object-meta.xml
<CustomObject>
    <label>Surgical Product Information</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Surgical Product Information Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Surgical Product Informations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>