force-app/main/default/objects/Surgical_Product_Information__c/fields/Capital_Equipment_Information__c.field-meta.xml
<CustomField>
    <fullName>Capital_Equipment_Information__c</fullName>
    <label>Capital/Disposable Equipment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fluid Waste Management</fullName>
            </value>
            <value>
                <fullName>Power Equipment</fullName>
            </value>
            <value>
                <fullName>Tourniquets</fullName>
            </value>
            <value>
                <fullName>Surgical Helmet</fullName>
            </value>
            <value>
                <fullName>Traction</fullName>
            </value>
            <value>
                <fullName>Wound Debridement</fullName>
            </value>
            <value>
                <fullName>Saw Blades</fullName>
            </value>
            <value>
                <fullName>Disposable Tourniquets</fullName>
            </value>
            <value>
                <fullName>Blood Management</fullName>
            </value>
            <value>
                <fullName>Bone Cement Accessories</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>