force-app/main/default/objects/Surgical_Product_Information__c/fields/Contract_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Expiration_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Contract Expiration Date</label>
    <type>Date</type>
</CustomField>