force-app/main/default/objects/Surgical_Product_Information__c/fields/Contract_Tied_to_Capital__c.field-meta.xml
<CustomField>
    <fullName>Contract_Tied_to_Capital__c</fullName>
    <label>Contract Tied to Capital</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>