force-app/main/default/objects/Surgical_Product_Information__c/fields/Current_Contract_Term__c.field-meta.xml
<CustomField>
    <fullName>Current_Contract_Term__c</fullName>
    <inlineHelpText>Contracts should be in months.</inlineHelpText>
    <label>Contract Duration (Month)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>