force-app/main/default/objects/Surgical_Product_Information__c/fields/Current_Equipment_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Current_Equipment_Vendor__c</fullName>
    <label>Current Equipment Vendor</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Depuy</fullName>
            </value>
            <value>
                <fullName>Biomet</fullName>
            </value>
            <value>
                <fullName>Exactec</fullName>
            </value>
            <value>
                <fullName>Smith and Nephew</fullName>
            </value>
            <value>
                <fullName>Stryker</fullName>
            </value>
            <value>
                <fullName>Synthes</fullName>
            </value>
            <value>
                <fullName>Tornier</fullName>
            </value>
            <value>
                <fullName>Wright Medical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>