force-app/main/default/objects/Surgical_Product_Information__c/fields/Current_Pricing__c.field-meta.xml
<CustomField>
    <fullName>Current_Pricing__c</fullName>
    <label>Current Pricing</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>