force-app/main/default/objects/Surgical_Product_Information__c/fields/Disposable_Contract__c.field-meta.xml
<CustomField>
    <fullName>Disposable_Contract__c</fullName>
    <label>Disposable Contract</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>