force-app/main/default/objects/Surgical_Product_Information__c/fields/Generation_Model__c.field-meta.xml
<CustomField>
    <fullName>Generation_Model__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Generation/Model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>