force-app/main/default/objects/Surgical_Product_Information__c/fields/On_Contract__c.field-meta.xml
<CustomField>
    <fullName>On_Contract__c</fullName>
    <label>On Contract</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Local</fullName>
            </value>
            <value>
                <fullName>GPO</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>